--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,9 @@ django==5.0
     # via -r requirements.in
 django-environ==0.11.2
     # via -r requirements.in
+gunicorn==21.2.0
+    # via -r requirements.in
+packaging==23.2
+    # via gunicorn
 sqlparse==0.4.4
     # via django
